<resources>
  <string name="app_name">Saif\'s Portfolio (Admin)</string>

  <string name="title_activity_inbox">Inbox</string>
  <string name="title_activity_clients">Clients</string>
  <string name="title_invoices">Invoices</string>

  <string name="name">I AM SAIF KHAN</string>
  <string name="tagline">Versatile software engineer skilled in mobile development, machine learning and computer
    vision.
  </string>

  <string name="prompt_email">Email</string>
  <string name="invalid_email">Not a valid email address</string>

  <string name="prompt_password">Password</string>
  <string name="invalid_password">Password must be >5 characters</string>

  <string name="action_sign_in">Sign in</string>
  <string name="action_sign_out">Sign Out</string>
  <string name="login_failed">"Login failed"</string>

  <string name="action_inbox">Inbox</string>
  <string name="label_art">Art</string>
  <string name="label_books">Books</string>
  <string name="label_clients">Clients</string>
  <string name="label_projects">Projects</string>
  <string name="label_research">Research</string>
  <string name="label_work">Work</string>
  <string name="label_reply">Reply</string>
  <string name="label_projects_none">No Projects Found</string>
  <string name="greeting">HELL0</string>

  <string name="book_category_fiction">Fiction</string>
  <string name="book_category_nonfiction">Non-Fiction</string>

  <!-- Transitions -->
  <string name="transition_inbox">inbox_transition</string>
</resources>